EnchantCommand & MsgCommand and updated existing commands